Alignment and mobile view fixes

--- a/just-throw-it/src/style/AccountPage.css
+++ b/just-throw-it/src/style/AccountPage.css
@@ -1,25 +1,23 @@
 .userinfo {
   max-width: 500px !important;
   text-align: left;
+  padding: 0 !important;
 }
 
 .profile {
-  margin: 50px;
+  margin-top: 50px;
 }
 
 .data-row {
   margin: 10px 0 10px 0;
 }
 
-.account-page {
-  min-width: 410px;
-}
-
 .account-page-buttons {
   margin: 20px;
 }
 
-.profile-button {
+.btn {
   margin-right: 10px;
+  margin-top: 10px;
 }
 
