--- a/just-throw-it/src/style/FieldPicker.css
+++ b/just-throw-it/src/style/FieldPicker.css
@@ -1,7 +1,7 @@
 .field-card {
     min-width: 250px !important;
     max-width: 250px !important;
-    margin: 40px !important;
+    margin: 40px auto 40px auto !important;
 }
 
 .card-deck {
